load("@rules_go//go:def.bzl", "go_binary", "go_test")
load("//rules/pipeline:defs.bzl", "pipeline_catalog", "pipeline_component", "pipeline_helm_render", "pipeline_plan", "pipeline_service")

package(default_visibility = ["//visibility:public"])

exports_files([
    "launcher.bzl",
    "plan_main.py",
    "render_main.py",
])

filegroup(
    name = "shared_contracts",
    srcs = ["testdata/shared/contracts/schema.json"],
)

filegroup(
    name = "api_graph",
    srcs = glob(["testdata/services/api/**"]) + [":shared_contracts"],
)

filegroup(
    name = "web_graph",
    srcs = glob(["testdata/services/web/**"]) + [":shared_contracts"],
)

filegroup(
    name = "worker_graph",
    srcs = glob(["testdata/services/worker/**"]),
)

filegroup(
    name = "contracts_component_graph",
    srcs = [
        ":shared_contracts",
        "testdata/components/contracts/README.md",
    ],
)

go_test(
    name = "api_lint",
    srcs = ["ok_test.go"],
)

go_test(
    name = "api_unit",
    srcs = ["ok_test.go"],
)

go_test(
    name = "api_integration",
    srcs = ["ok_test.go"],
)

go_binary(
    name = "api_image",
    embed = ["//tools/testhelpers/fakecmd:fakecmd_lib"],
)

go_test(
    name = "web_lint",
    srcs = ["ok_test.go"],
)

go_test(
    name = "web_unit",
    srcs = ["ok_test.go"],
)

go_test(
    name = "web_integration",
    srcs = ["ok_test.go"],
)

go_binary(
    name = "web_image",
    embed = ["//tools/testhelpers/fakecmd:fakecmd_lib"],
)

go_test(
    name = "worker_lint",
    srcs = ["ok_test.go"],
)

go_test(
    name = "worker_unit",
    srcs = ["ok_test.go"],
)

go_test(
    name = "worker_integration",
    srcs = ["ok_test.go"],
)

go_test(
    name = "contracts_lint",
    srcs = ["ok_test.go"],
)

go_test(
    name = "contracts_unit",
    srcs = ["ok_test.go"],
)

go_test(
    name = "contracts_integration",
    srcs = ["ok_test.go"],
)

go_binary(
    name = "worker_image",
    embed = ["//tools/testhelpers/fakecmd:fakecmd_lib"],
)

go_binary(
    name = "fake_helm",
    embed = ["//tools/testhelpers/fakecmd:fakecmd_lib"],
)

go_binary(
    name = "fake_bazel",
    embed = ["//tools/testhelpers/fakecmd:fakecmd_lib"],
)

pipeline_helm_render(
    name = "api_render",
    service_name = "api",
    chart_dir = "rules/pipeline/private/testdata/charts/api",
    chart_files = glob(["testdata/charts/api/**"]),
    tool_helm = ":fake_helm",
)

pipeline_helm_render(
    name = "web_render",
    service_name = "web",
    chart_dir = "rules/pipeline/private/testdata/charts/web",
    chart_files = glob(["testdata/charts/web/**"]),
    tool_helm = ":fake_helm",
)

pipeline_helm_render(
    name = "worker_render",
    service_name = "worker",
    chart_dir = "rules/pipeline/private/testdata/charts/worker",
    chart_files = glob(["testdata/charts/worker/**"]),
    tool_helm = ":fake_helm",
)

pipeline_service(
    name = "api_service",
    service_name = "api",
    language = "go",
    analysis_targets = [":api_graph"],
    lint_targets = [":api_lint"],
    unit_targets = [":api_unit"],
    integration_targets = [":api_integration"],
    image_targets = [":api_image"],
    owners = ["team-api"],
    render_target = ":api_render",
    runtime_deps = ["web"],
)

pipeline_service(
    name = "web_service",
    service_name = "web",
    language = "web",
    analysis_targets = [":web_graph"],
    lint_targets = [":web_lint"],
    unit_targets = [":web_unit"],
    integration_targets = [":web_integration"],
    image_targets = [":web_image"],
    owners = ["team-web"],
    render_target = ":web_render",
    runtime_deps = ["api"],
)

pipeline_service(
    name = "worker_service",
    service_name = "worker",
    language = "custom",
    analysis_targets = [":worker_graph"],
    lint_targets = [":worker_lint"],
    unit_targets = [":worker_unit"],
    integration_targets = [":worker_integration"],
    image_targets = [":worker_image"],
    owners = ["team-worker"],
    render_target = ":worker_render",
    preview_mode = "full_isolated",
    runtime_deps = [],
    workload_kind = "worker",
)

pipeline_component(
    name = "contracts_component",
    component_name = "contracts",
    analysis_targets = [":contracts_component_graph"],
    lint_targets = [":contracts_lint"],
    unit_targets = [":contracts_unit"],
    integration_targets = [":contracts_integration"],
    owners = ["team-platform"],
)

pipeline_catalog(
    name = "catalog",
    services = [
        ":api_service",
        ":web_service",
        ":worker_service",
    ],
    components = [":contracts_component"],
    global_impact_files = ["rules/pipeline/private/testdata/global-impact.txt"],
    global_impact_prefixes = ["rules/pipeline/private/testdata/global/"],
)

pipeline_plan(
    name = "plan_smoke_launcher",
    catalog = ":catalog",
)

go_test(
    name = "runner_text_test",
    srcs = ["runner_text_test.go"],
    data = [
        "//rules/pipeline:defs.bzl",
        "//rules/pipeline:extensions.bzl",
        ":launcher.bzl",
        ":plan_main.py",
        ":render_main.py",
        "//tools/pipeline/helm:versions.bzl",
    ],
    args = [
        "$(location //rules/pipeline:defs.bzl)",
        "$(location //rules/pipeline:extensions.bzl)",
        "$(location :launcher.bzl)",
        "$(location :plan_main.py)",
        "$(location :render_main.py)",
        "$(location //tools/pipeline/helm:versions.bzl)",
    ],
    deps = ["//tools/testhelpers/testutil"],
)

go_test(
    name = "plan_smoke_test",
    srcs = ["plan_smoke_test.go"],
    data = [
        ":plan_smoke_launcher",
        ":fake_bazel",
        "//:BUILD.bazel",
    ],
    args = [
        "$(location :plan_smoke_launcher)",
        "$(location :fake_bazel)",
        "$(location //:BUILD.bazel)",
    ],
    deps = ["//tools/testhelpers/testutil"],
)

go_test(
    name = "render_smoke_test",
    srcs = ["render_smoke_test.go"],
    data = [
        ":api_render",
        "//:BUILD.bazel",
    ],
    args = [
        "$(location :api_render)",
        "$(location //:BUILD.bazel)",
    ],
    deps = ["//tools/testhelpers/testutil"],
)
