load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

sh_test(
    name = "runner_text_test",
    srcs = ["runner_text_test.sh"],
    data = [
        "//rules/protobuf:buf.bzl",
        "//rules/protobuf:extensions.bzl",
        ":launcher.bzl",
        "//tools/protobuf:versions.bzl",
    ],
    args = [
        "$(location //rules/protobuf:buf.bzl)",
        "$(location //rules/protobuf:extensions.bzl)",
        "$(location :launcher.bzl)",
        "$(location //tools/protobuf:versions.bzl)",
    ],
)
