load("@rules_go//go:def.bzl", "go_binary", "go_test")
load("//rules/workspace:defs.bzl", "go_clean", "go_mod_download", "go_mod_tidy", "go_mod_verify", "workspace_drift_check", "workspace_modules_print", "workspace_sync")

package(default_visibility = ["//visibility:public"])

workspace_sync(
    name = "sync_smoke_launcher",
)

go_mod_tidy(name = "tidy_smoke_launcher")
go_mod_download(name = "download_smoke_launcher")
go_mod_verify(name = "verify_smoke_launcher")
workspace_drift_check(name = "drift_smoke_launcher")
workspace_modules_print(name = "modules_print_smoke_launcher")
go_clean(name = "clean_smoke_launcher")

go_binary(
    name = "fake_bazel",
    embed = ["//tools/testhelpers/fakecmd:fakecmd_lib"],
)

go_binary(
    name = "fake_go",
    embed = ["//tools/testhelpers/fakecmd:fakecmd_lib"],
)

go_test(
    name = "launcher_test",
    srcs = ["launcher_test.go"],
    data = [
        "//rules/workspace:defs.bzl",
        ":launcher.bzl",
        ":sync_smoke_launcher",
        ":tidy_smoke_launcher",
        ":download_smoke_launcher",
        ":verify_smoke_launcher",
        ":drift_smoke_launcher",
        ":modules_print_smoke_launcher",
        ":clean_smoke_launcher",
        ":fake_bazel",
        ":fake_go",
    ],
    args = [
        "$(location //rules/workspace:defs.bzl)",
        "$(location :launcher.bzl)",
        "$(location :sync_smoke_launcher)",
        "$(location :tidy_smoke_launcher)",
        "$(location :download_smoke_launcher)",
        "$(location :verify_smoke_launcher)",
        "$(location :drift_smoke_launcher)",
        "$(location :modules_print_smoke_launcher)",
        "$(location :clean_smoke_launcher)",
        "$(location :fake_bazel)",
        "$(location :fake_go)",
    ],
    deps = ["//tools/testhelpers/testutil"],
)
