load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

exports_files([
    "repositories.bzl",
    "versions.bzl",
])

sh_test(
    name = "text_test",
    srcs = ["text_test.sh"],
    data = [
        ":repositories.bzl",
        ":versions.bzl",
    ],
    args = [
        "$(location :repositories.bzl)",
        "$(location :versions.bzl)",
    ],
)
